fix: adjust margin for DescriptionList-description to ensure consistent spacing

--- a/app/javascript/stylesheets/components/_description-list.scss
+++ b/app/javascript/stylesheets/components/_description-list.scss
@@ -12,8 +12,7 @@
   }
 
   dd.DescriptionList-description {
-    margin-top: calc($base-unit / 6);
+    margin: calc($base-unit / 6) 0 0 0;
     padding: 0;
-    margin-bottom: 0;
   }
 }
